# llm-multi-ai-agent-system

./: .env.example  .gitignore  PROJECT_STATUS_REPORT.md  README.md  charset_normalizer-3.4.3-cp39-cp39-macosx_10_9_universal2.whl  create_glue_database.py  debug_agent_behavior.py  demo_data_processing_agent.py  gpt4o_mini_react_workflow.py  gpt5_mini_clean_workflow.py  gpt5_mini_compatible_workflow.py  main.py  production_demo.py  pyproject.toml  regex-2025.9.1-cp39-cp39-macosx_11_0_arm64.whl  run_workflow.py  test_aws_sagemaker_glue_setup.py  test_basic_functionality.py  test_components.py  test_comprehensive_final.py  test_comprehensive_functionality.py  test_langsmith.py  test_latest_file_creation.py  test_quality_fix.py  test_react_workflow.py  test_real_api.py  test_real_ingestion.py  test_upload_tool.py  tiktoken-0.7.0-cp39-cp39-macosx_11_0_arm64.whl  validate_environment.py  verify_s3_data.py
.github/: copilot-instructions.md
scripts/glue/: stock_feature_engineering.py
scripts/sagemaker/: feature_engineering.py
src/: __init__.py
src/agents/: __init__.py  base_agent.py  data_ingestion_agent.py
src/config/: __init__.py  settings.py
src/messaging/: __init__.py  message_bus.py
src/nodes/: workflow_nodes.py
src/orchestrator/: __init__.py  system_orchestrator.py
src/state/: workflow_state.py
src/storage/: __init__.py  s3_manager.py
src/tools/: agent_tools.py
src/workflows/: stock_prediction_workflow.py
tests/: conftest.py  test_data_ingestion_agent.py  test_langgraph_core.py
